Default: cleanup the internal ID from BusyIndicator

An internal ID in the OpacityAnimator element prevented deferred
execution for the whole content item. Apply the same visibility trick
in C++ to avoid having to use an ID in QML.

Task-number: QTBUG-65341
Change-Id: Icb20e4ecc60d1093e849737799bb269f7f03097a
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>